# JinuAI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
alembic/: AGENTS.md  env.py  script.py.mako
alembic/versions/: 01745f43dfd2_remove_width_and_height_from_asset.py  1962683fd6bf_add_asset_table.py  49fd23a3918f_add_new_agents_table.py  647c6841e742_remove_metadata_fields_use_minio_tags.py  7c1c9f8d6b02_drop_agents_table.py  d72c3ae4052c_rename_refined_prompt_to_prompt.py  e2a1af2c63a1_initial_bananadb_schema_photo_and_user_.py
app/: main.py
app/llm/: openai_llm.py
app/routes/: agent.py  auth.py  health.py  style.json  user.py
app/services/: AGENTS.md
app/services/agent/: README.md  agent_repository.py  agent_service.py
app/services/user/: user_repository.py  user_service.py
app/utils/: AGENTS.md  agent_guardrail.py  agent_helpers.py  agent_orchestration.py  agent_tool.py  config.py  delegate.py  exceptions.py  minio_storage.py  models.py  redisdb.py  security.py  sqldb.py  storage.py
